syntax = "proto3";


option csharp_namespace = "BankService_RPC";

package GrpcServices;

service Transaction {
  rpc GetByIds(GetByIdsRequest) returns(Transactions);
}

message GetByIdsRequest {
  repeated string ids = 1;
}

message Transactions {
  repeated TransactionData data = 1;
}

message TransactionData {
  string id = 1;
  int32 amount = 2;
  bool isCredit = 3;
  string fromAccount = 4;
  int64 date = 5;
  string informationToAccountOwner = 6;
  bool isReconciled = 7;
  string customerStatementMessage = 8;
}
